# haskell-tools.nvim

./: .all-contributorsrc  .editorconfig  .gitignore  .luarc.json  .neoconf.json  :w  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ci.nix  feedback.yaml  flake.nix  haskell-tools.nvim-scm-1.rockspec  shell.nix
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: auto-merge.yml  docgen.yml  flakehub-publish-tagged.yaml  luarocks.yml  nix-build.yml  pr.yml  release-please-config.json  release-please.yml  release.yml  review-checklist.yml  update.yml
doc/: haskell-tools.txt
ftplugin/: cabal.lua  cabalproject.lua  lhaskell.lua
lua/: deps.lua  haskell-tools.lua
lua/haskell-tools/: commands.lua  compat.lua  config.lua  dap.lua  deps.lua  health.lua  hoogle-local.lua  hoogle-web.lua  hoogle.lua  init.lua  internal-types.lua  internal.lua  log.lua  lsp.lua  os.lua  parser.lua  project-util.lua  project.lua  (+5 more)
nix/: docgen.nix  haskell-tooling-overlay.nix  luarocks-upload.nix  overlay.nix  pkgs.nix  pre-commit.nix  sources.json  test-overlay.nix
spec/: hls.json  hoogle_spec.lua  init_spec.lua  lsp_spec.lua  parser_spec.lua  project_spec.lua  repl_spec.lua  setup_spec.lua
spec/fixtures/cabal/multi-package/sub1/: sub1.cabal
spec/fixtures/cabal/multi-package/sub1/test/: Spec.hs
tests/: hoogle_spec.lua  lsp_spec.lua  minimal.lua  parser_spec.lua  project_spec.lua  repl_spec.lua  setup_spec.lua  util_spec.lua
troubleshooting/: minimal.lua
(+41 files in other folders)
